feat: add packages demo pages

--- a/index.html
+++ b/index.html
@@ -3,43 +3,12 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skill Tree of yishiashia-2017</title>
-    <script type="text/javascript" src="jquery.js"></script>
-    <script type="text/javascript" src="skills.js"></script>
-    <script type="text/javascript" src="skills_layout.js"></script>
-    <script type="text/javascript" src="skills_fromJSON.js"></script>
-    <script type="text/javascript" src="skills_toURL.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <meta http-equiv="refresh" content="0; url=https://github.com/yishiashia" />
+    <title>yishiashia</title>
 </head>
-<body style="min-height: 950px;">
-
-<style>
-a:link {
-    color: #00ccff;
-}
-a:visited {
-    color: #ff9999;
-}
-</style>
-
-<h2 style="color: #FFF; padding: 20px 20px 20px 35px;">Skill Tree of <span style="color: #00ccff;"><a href="https://github.com/yishiashia" target="_blank" rel="noopener noreferrer">yishiashia</a></span> in 2017~<span id="toyear"></span></h2>
-<div id="st"></div>
-
-<div style="padding: 20px 20px 20px 35px; position: absolute; top: 800px; color: #FFF; font-weight: bold;">
-Based on <a href="https://github.com/andrienko/skills" target="_blank" rel="noopener noreferrer">skill (Github)</a> project.
-<div>
-</body>
-
-<script type="text/javascript">
-
-    $(function(){
-        var d = new Date();
-        var n = d.getFullYear();
-        document.getElementById("toyear").innerHTML = n;
-        window.location.hash = '#flask3redis2nginx2docker1jenkins1test_automation2ci_cd3pi1beacon2javascript2';
-        skilltree.buildFromJSON('trees/web.json',$('#st'));
-    });
-
+<body>
+<script>
+window.location.replace("https://github.com/yishiashia");
 </script>
-
+</body>
 </html>
