feat: add floating label input package

--- a/demo.html
+++ b/demo.html
@@ -50,11 +50,11 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td><a href="mac-input.html">WebComponent Demo | mac-input</a></td>
+                <td><a href="fl-input.html">WebComponent Demo | fl-input</a></td>
                 <td><span style="display: inline-block;">
-                  <a href="https://www.npmjs.com/package/wc-mac-input"><img src="img/npm.svg" style="height: 20px; margin-right: 10px;" /></a>
-                  <a href="https://www.webcomponents.org/element/wc-mac-input"><img src="img/wc.svg" style="height: 20px; margin-right: 10px;" /></a>
-                  <a href="https://github.com/yishiashia/wc-mac-input"><img src="img/github.png" style="height: 20px; margin-right: 10px;" /></a>
+                  <a href="https://www.npmjs.com/package/@yishiashia/floating-label-input"><img src="img/npm.svg" style="height: 20px; margin-right: 10px;" /></a>
+                  <a href="https://www.webcomponents.org/element/@yishiashia/floating-label-input"><img src="img/wc.svg" style="height: 20px; margin-right: 10px;" /></a>
+                  <a href="https://github.com/yishiashia/floating-label-input"><img src="img/github.png" style="height: 20px; margin-right: 10px;" /></a>
                 </span></td>
               </tr>
               <tr>
@@ -72,6 +72,15 @@
                 <td><span style="display: inline-block;">
                   <a href="https://www.npmjs.com/package/@yishiashia/scroll-to-element"><img src="img/npm.svg" style="height: 20px; margin-right: 10px;" /></a>
                   <a href="https://github.com/yishiashia/scroll-to-element"><img src="img/github.png" style="height: 20px; margin-right: 10px;" /></a>
+                </span></td>
+              </tr>
+              <tr>
+                <th scope="row">4</th>
+                <td><a href="mac-input.html">WebComponent Demo | mac-input</a></td>
+                <td><span style="display: inline-block;">
+                  <a href="https://www.npmjs.com/package/wc-mac-input"><img src="img/npm.svg" style="height: 20px; margin-right: 10px;" /></a>
+                  <a href="https://www.webcomponents.org/element/wc-mac-input"><img src="img/wc.svg" style="height: 20px; margin-right: 10px;" /></a>
+                  <a href="https://github.com/yishiashia/wc-mac-input"><img src="img/github.png" style="height: 20px; margin-right: 10px;" /></a>
                 </span></td>
               </tr>
             </tbody>
