feat: add package descriptions

--- a/star-input.html
+++ b/star-input.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebComponent Demo | star-input</title>
+    <title>WebComponent Demo | starc-input</title>
     <!-- Latest compiled and minified CSS -->
     <link
       rel="stylesheet"
@@ -48,8 +48,8 @@
               <star-input
                 id="star-input"
                 name="stars"data-halfstar="true"
-                height="30"
-                width="30"
+                height="50"
+                width="50"
               >
               </star-input>
             </div>
