--- a/demo.html
+++ b/demo.html
@@ -58,6 +58,15 @@
                 </span></td>
               </tr>
               <tr>
+                <td></td>
+                <td colspan="2">
+                  <p>Floating labes input implemented with WebComponent.</p>
+                  <p>
+                    <img src="./img/demo/floating-label.gif" style="max-height: 170px;" />
+                  </p>
+                </td>
+              </tr>
+              <tr>
                 <th scope="row">2</th>
                 <td><a href="star-input.html">WebComponent Demo | star-input</a></td>
                 <td><span style="display: inline-block;">
@@ -65,6 +74,15 @@
                   <a href="https://www.webcomponents.org/element/wc-star-input"><img src="img/wc.svg" style="height: 20px; margin-right: 10px;" /></a>
                   <a href="https://github.com/yishiashia/wc-star-input"><img src="img/github.png" style="height: 20px; margin-right: 10px;" /></a>
                 </span></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td colspan="2">
+                  <p>Star rating input implemented with WebComponent.</p>
+                  <p>
+                    <img src="./img/demo/star-input.gif" style="max-height: 120px;" />
+                  </p>
+                </td>
               </tr>
               <tr>
                 <th scope="row">3</th>
@@ -75,6 +93,12 @@
                 </span></td>
               </tr>
               <tr>
+                <td></td>
+                <td colspan="2">
+                  <p>An alternative implement of smooth scroll.</p>
+                </td>
+              </tr>
+              <tr>
                 <th scope="row">4</th>
                 <td><a href="mac-input.html">WebComponent Demo | mac-input</a></td>
                 <td><span style="display: inline-block;">
@@ -82,6 +106,15 @@
                   <a href="https://www.webcomponents.org/element/wc-mac-input"><img src="img/wc.svg" style="height: 20px; margin-right: 10px;" /></a>
                   <a href="https://github.com/yishiashia/wc-mac-input"><img src="img/github.png" style="height: 20px; margin-right: 10px;" /></a>
                 </span></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td colspan="2">
+                  <p>Mac Address input implemented with WebComponent.</p>
+                  <p>
+                    <img src="./img/demo/mac-input.gif" style="max-height: 80px;" />
+                  </p>
+                </td>
               </tr>
             </tbody>
           </table>
