feat: update max-width of demo images

--- a/demo.html
+++ b/demo.html
@@ -25,6 +25,9 @@
       ol li {
         font-size: 14pt;
       }
+      p img {
+        max-width: 90%;
+      }
     </style>
   </head>
   <body>
