--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>yishiashia's front-end packages</title>
     <!-- Latest compiled and minified CSS -->
     <link
       rel="stylesheet"
