fix: correct typos

--- a/demo.html
+++ b/demo.html
@@ -63,7 +63,7 @@
               <tr>
                 <td></td>
                 <td colspan="2">
-                  <p>Floating labes input implemented with WebComponent.</p>
+                  <p>Floating label input implemented with WebComponent.</p>
                   <p>
                     <img src="./img/demo/floating-label.gif" style="max-height: 170px;" />
                   </p>
