feat: add mic-input demo page

--- a/demo.html
+++ b/demo.html
@@ -53,19 +53,19 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
-                <td><a href="fl-input.html">WebComponent Demo | fl-input</a></td>
+                <td><a href="mic-input.html">WebComponent Demo | mic-input</a></td>
                 <td><span style="display: inline-block;">
-                  <a href="https://www.npmjs.com/package/@yishiashia/floating-label-input"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
-                  <a href="https://www.webcomponents.org/element/@yishiashia/floating-label-input"><img src="img/wc.svg" style="height: 20px; margin-right: 5px;" /></a>
-                  <a href="https://github.com/yishiashia/floating-label-input"><img src="img/github.png" style="height: 20px; margin-right: 5px;" /></a>
+                  <a href="https://www.npmjs.com/package/wc-mic-input"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
+                  <a href="https://www.webcomponents.org/element/wc-mic-input"><img src="img/wc.svg" style="height: 20px; margin-right: 5px;" /></a>
+                  <a href="https://github.com/yishiashia/wc-mic-input"><img src="img/github.png" style="height: 20px; margin-right: 5px;" /></a>
                 </span></td>
               </tr>
               <tr>
                 <td></td>
                 <td colspan="2">
-                  <p>Floating label input implemented with WebComponent.</p>
+                  <p>Speech input WebComponent implemented with Web Speech API.</p>
                   <p>
-                    <img src="./img/demo/floating-label.gif" style="max-height: 170px;" />
+                    <img src="./img/demo/mic-input.gif" style="max-height: 120px;" />
                   </p>
                 </td>
               </tr>
@@ -89,6 +89,24 @@
               </tr>
               <tr>
                 <th scope="row">3</th>
+                <td><a href="fl-input.html">WebComponent Demo | fl-input</a></td>
+                <td><span style="display: inline-block;">
+                  <a href="https://www.npmjs.com/package/@yishiashia/floating-label-input"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
+                  <a href="https://www.webcomponents.org/element/@yishiashia/floating-label-input"><img src="img/wc.svg" style="height: 20px; margin-right: 5px;" /></a>
+                  <a href="https://github.com/yishiashia/floating-label-input"><img src="img/github.png" style="height: 20px; margin-right: 5px;" /></a>
+                </span></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td colspan="2">
+                  <p>Floating label input implemented with WebComponent.</p>
+                  <p>
+                    <img src="./img/demo/floating-label.gif" style="max-height: 170px;" />
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">4</th>
                 <td><a href="scroll-to-element.html">Demo | scroll-to-element</a></td>
                 <td><span style="display: inline-block;">
                   <a href="https://www.npmjs.com/package/@yishiashia/scroll-to-element"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
@@ -102,7 +120,7 @@
                 </td>
               </tr>
               <tr>
-                <th scope="row">4</th>
+                <th scope="row">5</th>
                 <td><a href="mac-input.html">WebComponent Demo | mac-input</a></td>
                 <td><span style="display: inline-block;">
                   <a href="https://www.npmjs.com/package/wc-mac-input"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
