feat: add package download links in demo pages

--- a/scroll-to-element.html
+++ b/scroll-to-element.html
@@ -44,6 +44,10 @@
     <h1>Demo | scroll-to-element</h1>
     <a style="float: right;" href="https://yishiashia.github.io/demo.html">back to index</a>
     <hr />
+    <div>
+      <a href="https://www.npmjs.com/package/@yishiashia/scroll-to-element"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
+      <a href="https://github.com/yishiashia/scroll-to-element"><img src="img/github.png" style="height: 20px; margin-right: 5px;" /></a>
+    </div>
     <div class="content-block"></div>
     <div class="content-block"></div>
     <div id="scroll-target" class="content-block" style="background-color: yellow;">
