--- a/mac-input.html
+++ b/mac-input.html
@@ -37,6 +37,11 @@
         <h1 style="display: inline-block;">WebComponent Demo | mac-input</h1>
     <a style="float: right;" href="https://yishiashia.github.io/demo.html">back to index</a>
     <hr />
+      <div>
+        <a href="https://www.npmjs.com/package/wc-mac-input"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
+        <a href="https://www.webcomponents.org/element/wc-mac-input"><img src="img/wc.svg" style="height: 20px; margin-right: 5px;" /></a>
+        <a href="https://github.com/yishiashia/wc-mac-input"><img src="img/github.png" style="height: 20px; margin-right: 5px;" /></a>
+      </div>
       <div class="page-header">
         <h2>Demo form </h2>
       </div>
