--- a/mic-input.html
+++ b/mic-input.html
@@ -37,6 +37,11 @@
         <h1 style="display: inline-block;">WebComponent Demo | mic-input</h1>
     <a style="float: right;" href="https://yishiashia.github.io/demo.html">back to index</a>
     <hr />
+      <div>
+        <a href="https://www.npmjs.com/package/wc-mic-input"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
+        <a href="https://www.webcomponents.org/element/wc-mic-input"><img src="img/wc.svg" style="height: 20px; margin-right: 5px;" /></a>
+        <a href="https://github.com/yishiashia/wc-mic-input"><img src="img/github.png" style="height: 20px; margin-right: 5px;" /></a>
+      </div>
       <div class="page-header">
         <h2>Demo form </h2>
       </div>
@@ -44,7 +49,7 @@
         <div class="panel-body">
           <form action="#" method="POST" onsubmit="return form_submit(event)">
             <div class="form-group">
-              <label for="mic-input">Enter something:</label><br/>
+              <label for="mic-input">Click the microphone icon and speech:</label><br/>
               <mic-input name="message" height="36"></mic-input>
             </div>
             <input type="submit" value="submit" />
