feat: update title

--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>yishiashia's front-end packages</title>
+    <title>Simple front-end component library</title>
     <!-- Latest compiled and minified CSS -->
     <link
       rel="stylesheet"
@@ -38,7 +38,7 @@
     </style>
     <div class="container">
       <div class="page-header">
-        <h1>Demo of JavaScript packages</h1>
+        <h1>Simple front-end component library</h1>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
