feat: add swipe-to-refresh into module list

--- a/demo.html
+++ b/demo.html
@@ -53,6 +53,24 @@
             <tbody>
               <tr>
                 <th scope="row">1</th>
+                <td><a href="swipe-to-refresh.html">WebComponent Demo | swipe-to-refresh</a></td>
+                <td><span style="display: inline-block;">
+                  <a href="https://www.npmjs.com/package/swipe-to-refresh"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
+                  <a href="https://www.webcomponents.org/element/swipe-to-refresh"><img src="img/wc.svg" style="height: 20px; margin-right: 5px;" /></a>
+                  <a href="https://github.com/yishiashia/swipe-to-refresh"><img src="img/github.png" style="height: 20px; margin-right: 5px;" /></a>
+                </span></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td colspan="2">
+                  <p>A WebComponent to pull the window down and refresh.</p>
+                  <p>
+                    <img src="./img/demo/swipe-to-refresh.png" style="max-height: 240px;" />
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
                 <td><a href="mic-input.html">WebComponent Demo | mic-input</a></td>
                 <td><span style="display: inline-block;">
                   <a href="https://www.npmjs.com/package/wc-mic-input"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
@@ -70,7 +88,7 @@
                 </td>
               </tr>
               <tr>
-                <th scope="row">2</th>
+                <th scope="row">3</th>
                 <td><a href="star-input.html">WebComponent Demo | star-input</a></td>
                 <td><span style="display: inline-block;">
                   <a href="https://www.npmjs.com/package/wc-star-input"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
@@ -88,7 +106,7 @@
                 </td>
               </tr>
               <tr>
-                <th scope="row">3</th>
+                <th scope="row">4</th>
                 <td><a href="fl-input.html">WebComponent Demo | fl-input</a></td>
                 <td><span style="display: inline-block;">
                   <a href="https://www.npmjs.com/package/@yishiashia/floating-label-input"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
@@ -106,7 +124,7 @@
                 </td>
               </tr>
               <tr>
-                <th scope="row">4</th>
+                <th scope="row">5</th>
                 <td><a href="scroll-to-element.html">Demo | scroll-to-element</a></td>
                 <td><span style="display: inline-block;">
                   <a href="https://www.npmjs.com/package/@yishiashia/scroll-to-element"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
@@ -120,7 +138,7 @@
                 </td>
               </tr>
               <tr>
-                <th scope="row">5</th>
+                <th scope="row">6</th>
                 <td><a href="mac-input.html">WebComponent Demo | mac-input</a></td>
                 <td><span style="display: inline-block;">
                   <a href="https://www.npmjs.com/package/wc-mac-input"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
