--- a/swipe-to-refresh.html
+++ b/swipe-to-refresh.html
@@ -29,9 +29,25 @@
       document.querySelector("swipe-refresh").refresh = doRefresh;
     }
   </script>
+  <style>
+    html {
+      font-size: 16px;
+    }
+    
+    body {
+      overflow: hidden;
+    }
+
+    #container {
+      height: 100vh;
+      overflow-y: auto;
+      overflow-x: hidden;
+      -webkit-overflow-scrolling: touch;
+    }
+  </style>
 </head>
 <body onload="init()">
-  <div class="container">
+  <div id="container" class="container">
     <h2 style="display: inline-block;">WebComponent Demo | swipe-to-refresh</h2>
     <a style="float: right;" href="https://yishiashia.github.io/demo.html">back to index</a>
     <hr />
@@ -45,6 +61,7 @@
       <div style="margin: 20px; padding: 20px;">
         <h3>Swipe down to refresh.</h3>
         <p style="color: blue; font-weight: bold;">Using the mobile device to test touch event.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et id voluptatem dolore similique amet cumque ea cupiditate, eligendi totam minus aperiam consectetur doloremque optio repellendus, numquam assumenda dolores aspernatur. Impedit?</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et id voluptatem dolore similique amet cumque ea cupiditate, eligendi totam minus aperiam consectetur doloremque optio repellendus, numquam assumenda dolores aspernatur. Impedit?</p>
       </div>
     </div>
