--- a/demo.html
+++ b/demo.html
@@ -155,6 +155,24 @@
                   </p>
                 </td>
               </tr>
+              <tr>
+                <th scope="row">7</th>
+                <td><a href="dropdown.html">WebComponent Demo | dropdown</a></td>
+                <td><span style="display: inline-block;">
+                  <a href="https://www.npmjs.com/package/wc-dropdown"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
+                  <a href="https://www.webcomponents.org/element/wc-dropdown"><img src="img/wc.svg" style="height: 20px; margin-right: 5px;" /></a>
+                  <a href="https://github.com/yishiashia/wc-dropdown"><img src="img/github.png" style="height: 20px; margin-right: 5px;" /></a>
+                </span></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td colspan="2">
+                  <p>Mac Address input implemented with WebComponent.</p>
+                  <p>
+                    <img src="./img/demo/dropdown.png" style="max-height: 220px;" />
+                  </p>
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
