chore: update heading title of dropdown demo page

--- a/dropdown.html
+++ b/dropdown.html
@@ -40,7 +40,7 @@
   <body>
     <script src="./dist/dropdown.js"></script>
     <div class="container">
-        <h1 style="display: inline-block;">WebComponent Demo | star-input</h1>
+        <h1 style="display: inline-block;">WebComponent Demo | dropdown</h1>
     <a style="float: right;" href="https://yishiashia.github.io/demo.html">back to index</a>
     <hr />
       <div>
