chore: add tw-address-input demo page

--- a/demo.html
+++ b/demo.html
@@ -167,9 +167,27 @@
               <tr>
                 <td></td>
                 <td colspan="2">
-                  <p>Mac Address input implemented with WebComponent.</p>
+                  <p>Dropdown menu implemented with WebComponent.</p>
                   <p>
                     <img src="./img/demo/dropdown.png" style="max-height: 220px;" />
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">8</th>
+                <td><a href="address.html">WebComponent Demo | tw-addtess-input</a></td>
+                <td><span style="display: inline-block;">
+                  <a href="https://www.npmjs.com/package/tw-address-input"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
+                  <a href="https://www.webcomponents.org/element/tw-address-input"><img src="img/wc.svg" style="height: 20px; margin-right: 5px;" /></a>
+                  <a href="https://github.com/yishiashia/tw-address-input"><img src="img/github.png" style="height: 20px; margin-right: 5px;" /></a>
+                </span></td>
+              </tr>
+              <tr>
+                <td></td>
+                <td colspan="2">
+                  <p>Taiwan address input implemented with WebComponent.</p>
+                  <p>
+                    <img src="./img/demo/tw-address.gif" />
                   </p>
                 </td>
               </tr>
