feat: update address demo page

--- a/address.html
+++ b/address.html
@@ -56,9 +56,9 @@
           <form action="#" method="POST" onsubmit="return form_submit(event)">
             <div class="form-group">
               <label for="">Select an option:</label><br/>
-              <div style="max-width: 300px;">
+              <div align="left">
                 <tw-address
-                  style="width: 500px; margin: 20px auto;"
+                  style="width: 500px; margin: 20px auto; max-width: 100%;"
                   name="address"
                 >
                 </tw-address>
