chore: update submit button styles

--- a/address.html
+++ b/address.html
@@ -55,16 +55,16 @@
         <div class="panel-body">
           <form action="#" method="POST" onsubmit="return form_submit(event)">
             <div class="form-group">
-              <label for="">Select an option:</label><br/>
+              <label for="">Please enter your address:</label><br/>
               <div align="left">
                 <tw-address
-                  style="width: 500px; margin: 20px auto; max-width: 100%;"
+                  style="width: 500px; max-width: 100%;"
                   name="address"
                 >
                 </tw-address>
               </div>
             </div>
-            <input type="submit" value="submit" />
+            <input class="btn btn-primary" type="submit" value="submit" />
           </form>
         </div>
       </div>
