--- a/mac-input.html
+++ b/mac-input.html
@@ -52,7 +52,7 @@
               <label for="mac-input">Mac address:</label>
               <mac-input id="mac-input" name="mac"></mac-input>
             </div>
-            <input type="submit" value="submit" />
+            <input class="btn btn-primary" type="submit" value="submit" />
           </form>
         </div>
       </div>
