--- a/mic-input.html
+++ b/mic-input.html
@@ -52,7 +52,7 @@
               <label for="mic-input">Click the microphone icon and speech:</label><br/>
               <mic-input name="message" height="36"></mic-input>
             </div>
-            <input type="submit" value="submit" />
+            <input class="btn btn-primary" type="submit" value="submit" />
           </form>
         </div>
       </div>
