--- a/dropdown.html
+++ b/dropdown.html
@@ -73,7 +73,7 @@
                 ></dropdown-menu>
               </div>
             </div>
-            <input type="submit" value="submit" />
+            <input class="btn btn-primary" type="submit" value="submit" />
           </form>
         </div>
       </div>
