--- a/fl-input.html
+++ b/fl-input.html
@@ -64,7 +64,7 @@
               >
               </fl-input>
             </div>
-            <input type="submit" value="submit" />
+            <input class="btn btn-primary" type="submit" value="submit" />
           </form>
         </div>
       </div>
