--- a/star-input.html
+++ b/star-input.html
@@ -58,7 +58,7 @@
               >
               </star-input>
             </div>
-            <input type="submit" value="submit" />
+            <input class="btn btn-primary" type="submit" value="submit" />
           </form>
         </div>
       </div>
