--- a/demo.html
+++ b/demo.html
@@ -175,7 +175,7 @@
               </tr>
               <tr>
                 <th scope="row">8</th>
-                <td><a href="address.html">WebComponent Demo | tw-addtess-input</a></td>
+                <td><a href="address.html">WebComponent Demo | tw-address-input</a></td>
                 <td><span style="display: inline-block;">
                   <a href="https://www.npmjs.com/package/tw-address-input"><img src="img/npm.svg" style="height: 20px; margin-right: 5px;" /></a>
                   <a href="https://www.webcomponents.org/element/tw-address-input"><img src="img/wc.svg" style="height: 20px; margin-right: 5px;" /></a>
