--- a/demo.html
+++ b/demo.html
@@ -195,7 +195,7 @@
           </table>
         </div>
       </div>
-      <footer style="width: 100vw; margin-top: 50px;">
+      <footer style="margin-top: 50px;">
         <p>
           <a
             href="https://github.com/yishiashia"
