chore: update article.first-entry min-height

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 border-color: var(--theme);
             }
         }
+        article.first-entry { min-height: auto; }
 
     </style>
 </noscript><meta property="og:title" content="yishiashia&#39;s Blog" />
