chore: update article.first-entry min-height

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
                 border-color: var(--theme);
             }
         }
-        article.first-entry { min-height: auto; }
 
     </style>
 </noscript><meta property="og:title" content="yishiashia&#39;s Blog" />
@@ -65,6 +64,9 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="yishiashia&#39;s Blog"/>
 <meta name="twitter:description" content=""/>
+<style>
+  article.first-entry { min-height: auto; }
+</style>
 
 <script type="application/ld+json">
 {
