chore: add default img background color

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="https://yishiashia.github.io/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.cdbec3d4081ea6cc4c34a44b356a08f057bb8ebd6e6da6a0ae58c09912815978.css" integrity="sha256-zb7D1AgepsxMNKRLNWoI8Fe7jr1ubaagrljAmRKBWXg=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.3a6b9c9a973092e29785badda15158e8e2635ec041880295a449aef883a824d2.css" integrity="sha256-OmucmpcwkuKXhbrdoVFY6OJjXsBBiAKVpEmu&#43;IOoJNI=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://yishiashia.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://yishiashia.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://yishiashia.github.io/favicon-32x32.png">
