chore: set min-width on img of listed post

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="canonical" href="https://yishiashia.github.io/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.9879553bc334ac015fdc9dfdf1d05388880eff8e789155c1d07a04698d2c197f.css" integrity="sha256-mHlVO8M0rAFf3J398dBTiIgO/454kVXB0HoEaY0sGX8=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.7836705c1bd37e1cc3f1d0f78731521166ab717c7c276f19fa37b4db3ad5aa17.css" integrity="sha256-eDZwXBvTfhzD8dD3hzFSEWarcXx8J28Z&#43;je02zrVqhc=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://yishiashia.github.io/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://yishiashia.github.io/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://yishiashia.github.io/favicon-32x32.png">
