--- a/demo.html
+++ b/demo.html
@@ -2,380 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="refresh" content="0; url=/posts/my-webcomponents/" />
     <title>Simple front-end component library</title>
-    <!-- Latest compiled and minified CSS -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous"
-    />
-
-    <!-- Optional theme -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css"
-      integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-      crossorigin="anonymous"
-    />
-
-    <style>
-      ol li {
-        font-size: 14pt;
-      }
-      p img {
-        max-width: 90%;
-      }
-    </style>
   </head>
-  <body>
-    <style>
-      li {
-        margin-bottom: 20px;
-      }
-    </style>
-    <div class="container">
-      <div class="page-header">
-        <h1>Simple front-end component library</h1>
-      </div>
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Packages</th>
-                <th scope="col">Download / Install</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>
-                  <a href="swipe-to-refresh.html"
-                    >WebComponent Demo | swipe-to-refresh</a
-                  >
-                </td>
-                <td>
-                  <span style="display: inline-block">
-                    <a href="https://www.npmjs.com/package/swipe-to-refresh"
-                      ><img
-                        src="img/npm.svg"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                    <a
-                      href="https://www.webcomponents.org/element/swipe-to-refresh"
-                      ><img
-                        src="img/wc.svg"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                    <a href="https://github.com/yishiashia/swipe-to-refresh"
-                      ><img
-                        src="img/github.png"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                  </span>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-                <td colspan="2">
-                  <p>A WebComponent to pull the window down and refresh.</p>
-                  <p>
-                    <img
-                      src="./img/demo/swipe-to-refresh.png"
-                      style="max-height: 240px"
-                    />
-                  </p>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>
-                  <a href="mic-input.html">WebComponent Demo | mic-input</a>
-                </td>
-                <td>
-                  <span style="display: inline-block">
-                    <a href="https://www.npmjs.com/package/wc-mic-input"
-                      ><img
-                        src="img/npm.svg"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                    <a href="https://www.webcomponents.org/element/wc-mic-input"
-                      ><img
-                        src="img/wc.svg"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                    <a href="https://github.com/yishiashia/wc-mic-input"
-                      ><img
-                        src="img/github.png"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                  </span>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-                <td colspan="2">
-                  <p>
-                    Speech input WebComponent implemented with Web Speech API.
-                  </p>
-                  <p>
-                    <img
-                      src="./img/demo/mic-input.gif"
-                      style="max-height: 120px"
-                    />
-                  </p>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>
-                  <a href="star-input.html">WebComponent Demo | star-input</a>
-                </td>
-                <td>
-                  <span style="display: inline-block">
-                    <a href="https://www.npmjs.com/package/wc-star-input"
-                      ><img
-                        src="img/npm.svg"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                    <a
-                      href="https://www.webcomponents.org/element/wc-star-input"
-                      ><img
-                        src="img/wc.svg"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                    <a href="https://github.com/yishiashia/wc-star-input"
-                      ><img
-                        src="img/github.png"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                  </span>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-                <td colspan="2">
-                  <p>Star rating input implemented with WebComponent.</p>
-                  <p>
-                    <img
-                      src="./img/demo/star-input.gif"
-                      style="max-height: 120px"
-                    />
-                  </p>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">4</th>
-                <td>
-                  <a href="fl-input.html">WebComponent Demo | fl-input</a>
-                </td>
-                <td>
-                  <span style="display: inline-block">
-                    <a
-                      href="https://www.npmjs.com/package/@yishiashia/floating-label-input"
-                      ><img
-                        src="img/npm.svg"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                    <a
-                      href="https://www.webcomponents.org/element/@yishiashia/floating-label-input"
-                      ><img
-                        src="img/wc.svg"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                    <a href="https://github.com/yishiashia/floating-label-input"
-                      ><img
-                        src="img/github.png"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                  </span>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-                <td colspan="2">
-                  <p>Floating label input implemented with WebComponent.</p>
-                  <p>
-                    <img
-                      src="./img/demo/floating-label.gif"
-                      style="max-height: 170px"
-                    />
-                  </p>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">5</th>
-                <td>
-                  <a href="scroll-to-element.html">Demo | scroll-to-element</a>
-                </td>
-                <td>
-                  <span style="display: inline-block">
-                    <a
-                      href="https://www.npmjs.com/package/@yishiashia/scroll-to-element"
-                      ><img
-                        src="img/npm.svg"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                    <a href="https://github.com/yishiashia/scroll-to-element"
-                      ><img
-                        src="img/github.png"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                  </span>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-                <td colspan="2">
-                  <p>An alternative implement of smooth scroll.</p>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">6</th>
-                <td>
-                  <a href="mac-input.html">WebComponent Demo | mac-input</a>
-                </td>
-                <td>
-                  <span style="display: inline-block">
-                    <a href="https://www.npmjs.com/package/wc-mac-input"
-                      ><img
-                        src="img/npm.svg"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                    <a href="https://www.webcomponents.org/element/wc-mac-input"
-                      ><img
-                        src="img/wc.svg"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                    <a href="https://github.com/yishiashia/wc-mac-input"
-                      ><img
-                        src="img/github.png"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                  </span>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-                <td colspan="2">
-                  <p>Mac Address input implemented with WebComponent.</p>
-                  <p>
-                    <img
-                      src="./img/demo/mac-input.gif"
-                      style="max-height: 80px"
-                    />
-                  </p>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">7</th>
-                <td>
-                  <a href="dropdown.html">WebComponent Demo | dropdown</a>
-                </td>
-                <td>
-                  <span style="display: inline-block">
-                    <a href="https://www.npmjs.com/package/wc-dropdown"
-                      ><img
-                        src="img/npm.svg"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                    <a href="https://www.webcomponents.org/element/wc-dropdown"
-                      ><img
-                        src="img/wc.svg"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                    <a href="https://github.com/yishiashia/wc-dropdown"
-                      ><img
-                        src="img/github.png"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                  </span>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-                <td colspan="2">
-                  <p>Dropdown menu implemented with WebComponent.</p>
-                  <p>
-                    <img
-                      src="./img/demo/dropdown.png"
-                      style="max-height: 220px"
-                    />
-                  </p>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">8</th>
-                <td>
-                  <a href="address.html"
-                    >WebComponent Demo | tw-address-input</a
-                  >
-                </td>
-                <td>
-                  <span style="display: inline-block">
-                    <a href="https://www.npmjs.com/package/tw-address-input"
-                      ><img
-                        src="img/npm.svg"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                    <a
-                      href="https://www.webcomponents.org/element/tw-address-input"
-                      ><img
-                        src="img/wc.svg"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                    <a href="https://github.com/yishiashia/tw-address-input"
-                      ><img
-                        src="img/github.png"
-                        style="height: 20px; margin-right: 5px"
-                    /></a>
-                  </span>
-                </td>
-              </tr>
-              <tr>
-                <td></td>
-                <td colspan="2">
-                  <p>Taiwan address input implemented with WebComponent.</p>
-                  <p>
-                    <img src="./img/demo/tw-address.gif" />
-                  </p>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <footer style="margin-top: 50px">
-        <p>
-          <a
-            href="https://github.com/yishiashia"
-            class="text-decoration-none"
-            target="_blank"
-            rel="noreferrer noopener"
-            style="display: inline-flex; align-items: center"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              class="bi bi-github"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
-              ></path>
-            </svg>
-            &nbsp;
-            <span>yishiashia</span>
-          </a>
-        </p>
-      </footer>
-    </div>
-  </body>
+  <body></body>
 </html>
